--- a/Todo-list-main/index (1).html
+++ b/Todo-list-main/index (1).html
@@ -17,4 +17,57 @@
 
     <script src="script.js"></script>
   </body>
+  <footer class="footer" role="contentinfo" itemscope itemtype="http://schema.org/Person">
+    <div class="footer-left" itemscope itemtype="http://schema.org/Person" class="h-card">
+        <img src="https://blogger.googleusercontent.com/img/a/AVvXsEiX_A56Zyh-QLWDJ-1Ugpp732H8h6l0yuCSXPFl2Nf8N0zUb8WKryx4MQPk0gYtsBW5QWHOWVfGwQawGSGjCVIh0vEsih7bqGGEjO7XVI0aGVC5GWVsRMmTLcmrf3_QeLysrpaAZzXIfA375a5ohMaBXh-Pzq3vA-YVLFHiRwkDRrn0aMu_HnnqD7zCr3Vr=s300" alt="Profile Picture" itemprop="image" class="u-logo logo" />
+        <h3 itemprop="name" class="p-name">S David Prince</h3>
+        <p class="p-job-title" itemprop="jobTitle">Web Developer</p>
+        <nav aria-label="Footer Navigation">
+            <p class="footer-links">
+                <a href="#" itemprop="url" class="link-1">Home</a>
+                <a href="#" itemprop="url">Blog</a>
+                <a href="#" itemprop="url">Projects</a>
+                <a href="#" itemprop="url">Contact</a>
+            </p>
+        </nav>
+        <p class="footer-name">© 2024 S David Prince</p>
+    </div>
+
+    <div class="footer-center">
+        <div itemscope itemtype="http://schema.org/PostalAddress" class="p-address">
+            <i class="fa fa-map-marker" aria-hidden="true"></i>
+            <p>
+                <span itemprop="streetAddress" class="p-street-address">123 This is a Street</span>,
+                <span itemprop="addressLocality" class="p-locality">A Locality</span>,
+                <span itemprop="addressRegion" class="p-region">Region state</span>,
+                <span itemprop="postalCode" class="p-postal-code">12345</span>
+            </p>
+        </div>
+        <div>
+            <i class="fa fa-phone" aria-hidden="true"></i>
+            <p itemprop="telephone" class="p-tel">+1 234567890</p>
+        </div>
+        <div>
+            <i class="fa fa-envelope" aria-hidden="true"></i>
+            <p><a href="mailto:myname@mail.com" itemprop="email" class="u-email">myname@mail.com</a></p>
+        </div>
+    </div>
+
+    <div class="footer-right">
+        <p class="footer-about">
+            <span>About Me</span>
+            Not a web developer, but have a knack for creating stunning websites and applications. Everywhere @sdavidprince
+        </p>
+        <div class="footer-socials">
+            <a href="#" rel="me" aria-label="LinkedIn" itemprop="sameAs" class="u-url"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="#" rel="me" aria-label="GitHub" itemprop="sameAs" class="u-url"><i class="fa-brands fa-github"></i></a>
+            <a href="#" rel="me" aria-label="Twitter" itemprop="sameAs" class="u-url"><i class="fa-brands fa-x-twitter"></i></a>
+           <a href="#" rel="me" aria-label="Mastodon" itemprop="sameAs" class="u-url"><i class="fa-brands fa-mastodon"></i></a>
+           <a href="#" rel="me" aria-label="Threads" itemprop="sameAs" class="u-url"><i class="fa-brands fa-threads"></i></a>
+           <a href="#" rel="me" aria-label="Facebook" itemprop="sameAs" class="u-url"><i class="fa-brands fa-facebook"></i></a>
+           <a href="#" rel="me" aria-label="Instagram" itemprop="sameAs" class="u-url"><i class="fa-brands fa-instagram"></i></a>
+        </div>
+    </div>
+</footer>
+
 </html>
